# Drive-Backup

./: .gitattributes  .gitignore  LICENSE  LICENSE.md  Pipfile  Privacy.md  README.md  _config.yml  app-build.py  app_build.py  dfsmap.py  drive-backup.py  drivebackup.py  github-pages-items.txt  license  pin_build.py  pyproject.toml
.github/actions/setup-keychain/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: build.yml  dev_test.yml  github_pages.yml  notifications.yml  publish_test_pypi.yml  release.yml
asciinema/demo/: drive-backup-demo.cast
hooks/: hook-drive_backup.py  hook-googleapiclient.model.py
notifications/mac/Drive Backup Notifications.app/Contents/: Info.plist
notifications/mac/Drive Backup Notifications.app/Contents/MacOS/: Drive Backup Notifications
notifications/mac/Drive Backup Notifications.app/Contents/Resources/: AppIcon.icns  Assets.car
notifications/mac/Drive Backup Notifications.app/Contents/_CodeSignature/: CodeResources
pages/: _config.yml
poetry-plugins/poetry-plugin-lock-build/: pyproject.toml
poetry-plugins/poetry-plugin-lock-build/src/poetry_plugin_lock_build/: __init__.py
poetry-plugins/poetry-plugin-pin-build/: pyproject.toml
poetry-plugins/poetry-plugin-pin-build/src/poetry_plugin_pin_build/: __init__.py
poetry-plugins/poetry-plugin-universal2-wheel/: pyproject.toml
poetry-plugins/poetry-plugin-universal2-wheel/src/poetry_plugin_universal2_wheel/: __init__.py
poetry_plugin_universal2_wheel/src/poetry_plugin_universal2_wheel/: __init__.py
src/cli/: __init__.py
src/core/: __init__.py  config.py  credentials.py  dfsmap.py  drivebackup.py
src/core/notifications/: __init__.py
src/core/notifications/mac/Drive Backup Notifications/Drive Backup Notifications/: AppDelegate.swift
src/core/notifications/mac/Drive Backup Notifications/Drive Backup Notifications.xcodeproj/: project.pbxproj
src/core/notifications/mac/Drive Backup Notifications/Drive Backup Notifications/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/core/notifications/windows/Drive Backup Notifications/: .gitignore  Drive Backup Notifications.sln
src/core/notifications/windows/Drive Backup Notifications/Drive Backup Notifications/: Drive Backup Notifications.cpp
src/credentials/: __init__.py  credentials.py
src/drive_backup/: __main__.py
src/drive_backup/cli/: __init__.py
src/drive_backup/core/: __init__.py  config.py  credentials.py  drivebackup.py  progress.py
src/drive_backup/core/notifications/: __init__.py
src/drive_backup/core/notifications/mac/Drive Backup Notifications/: .gitignore
src/drive_backup/core/notifications/mac/Drive Backup Notifications/Drive Backup Notifications/: AppDelegate.swift  Notify.swift  Steps to recreate.txt  main.swift
src/drive_backup/core/notifications/mac/Drive Backup Notifications/Drive Backup Notifications.xcodeproj/: project.pbxproj
src/drive_backup/core/notifications/mac/Drive Backup Notifications/Drive Backup Notifications.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
src/drive_backup/core/notifications/mac/Drive Backup Notifications/Drive Backup Notifications.xcodeproj/xcshareddata/xcschemes/: Drive Backup Notifications.xcscheme
src/drive_backup/core/notifications/mac/Drive Backup Notifications/Drive Backup Notifications/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/drive_backup/core/notifications/windows/Drive Backup Notifications/: Drive Backup Notifications.vcxproj  Drive Backup Notifications.vcxproj.filters
src/drive_backup/resources/: authentication_success.html  credentials.json
src/notifications/: __init__.py
