[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drive-backup"
version = "2.0.0"
requires-python = ">=3.11"
authors = [{ name = "George Waters", email = "gwatersdev@gmail.com" }]
description = "Backup your Google Drive files locally."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Google Drive", "backup"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://www.georgeh2os.com/Drive-Backup/"
Repository = "https://github.com/dunkmann00/Drive-Backup"
Issues = "https://github.com/dunkmann00/Drive-Backup/issues"

[project.scripts]
dbackup = "drive_backup.cli:main"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
google-api-python-client = ">=2.122.0"
google-auth-httplib2 = ">=0.2.0"
google-auth-oauthlib = ">=1.2.0"
rich = ">=13.7.1"
pathvalidate = ">=3.2.0"
cryptography = ">=42.0.5"
click = ">=8.1.7"

[tool.poetry.group.dev.dependencies]
tomlkit = "^0.12.4"

[tool.poetry.group.build.dependencies]
build = "^1.1.1"
