[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poetry-plugin-universal2-wheel"
version = "0.1.0"
authors = ["George Waters <gwatersdev@gmail.com>"]
description = "Reinstall specific packages with universal2 wheels on macOS."

[tool.poetry.dependencies]
python = ">=3.7"
poetry = ">=1.8"
delocate = "^0.11.0"

[tool.poetry.plugins."poetry.application.plugin"]
universal2 = "poetry_plugin_universal2_wheel:Universal2WheelPlugin"
